--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -15,8 +15,9 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 2%;
+    justify-content: flex-start;
+    padding: 15px;
+    gap: 15px;
 }
 
 .gif__container--light{
@@ -26,11 +27,13 @@
 .gif__container--dark{
     background-color: #212121;
 }
+.gif__link{
+    width: 32%;
+    cursor: pointer;
+}
 
 .gif__image{
-    width: 300px;
+    width: 100%;
     height: 300px;
-    vertical-align: center;
     object-fit: cover;
-    margin: 10px 0;
 }
