--- a/src/components/SearchList/SearchList.css
+++ b/src/components/SearchList/SearchList.css
@@ -1,8 +1,7 @@
 .search__list{
     position: absolute;
-    width: 35%;
-    margin-top: 5px;
-    left: 535px;
+    width: 550px;
+    top: 240px;
     border: 1px solid #572EE5;
     border-radius: 10px;
     background-color: white;
