--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -25,3 +25,10 @@
     border: 1px solid #F3F3F3;
     color: #F3F3F3;
 }
+
+@media (max-width:767px){
+    .btn{
+        font-size: 10px;
+        padding: 8px 12px;
+    }
+}
