--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -37,3 +37,15 @@
     height: 300px;
     object-fit: cover;
 }
+
+@media (max-width:1200px){
+    .gif__link{
+        width: 48%;
+    }
+}
+
+@media (max-width:767px){
+    .gif__link{
+        width: 100%;
+    }
+}
